# tap-peopleware

./: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
tap_peopleware/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_peopleware/schemas/: activity.py  contract.py  employee.py  planning_unit.py
tests/: __init__.py  test_core.py
